# libsparse

./: .gitignore  CMakeLists.txt  append2simg.cpp  backed_block.cpp  backed_block.h  img2simg.cpp  output_file.cpp  output_file.h  simg2img.cpp  simg2simg.cpp  sparse.cpp  sparse_err.cpp  sparse_fuzzer.cpp  sparse_read.cpp
android-base/: fdsan.h  mapped_file.h  unique_fd.h
